removed calls to NEXT

--- a/lib/Catalyst/Authentication/Store.pod
+++ b/lib/Catalyst/Authentication/Store.pod
@@ -129,5 +129,5 @@ These plugins should look something like this:
             )
         );
 
-        $c->NEXT::setup(@_);
+        $c->next::method(@_);
     }
